--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <style>
         /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
@@ -18,6 +19,7 @@
             margin: 10;
             padding: 5;
         }
+
         html, body {
             font-family: Roboto, Arial, sans-serif;
             font-size: 15px;
@@ -67,18 +69,21 @@
         }
     </style>
 </head>
-<header>
-    <h1>Looks like Jaz is Hungry!</h1>
+<header style="background-color: oldlace; font-family: 'cursive',Lucida Handwriting;">
+    <h1>Jaz Eats</h1>
+    <span hidden id="lat">{{ lat }}</span><span hidden id="log">{{ log }}</span>
 </header>
 <body>
     <div id="map"></div>
     <script>
         var map;
         function initMap() {
+            var lat = parseFloat(document.getElementById('lat').textContent)
+            var log = parseFloat(document.getElementById('log').textContent)
             map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: 39.0168576, lng: -87.7428736 },
+                center: { lat: lat, lng: log },
                 zoom: 15
-            });
+            });           
         }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDKTXC22b3UwBzEoULKfOry0O1f4hbfYE&callback=initMap"
@@ -111,18 +116,20 @@
         </div>
         <div class="container-fluid">
             {% for entry in entrys %}
-                <div class="row">
-                    <hr />
-                    <div class="g-col-4">
-                        <img src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=50&maxheight=75&photo_reference={{ entry.res_photo }}&key=AIzaSyDDKTXC22b3UwBzEoULKfOry0O1f4hbfYE" alt="alt text here" />
-                    </div>
-                    <div class="g-col-4">
-                        {{ entry.name }} <br />
-                        Rating: {{ entry.rating}} | Price Level: {{entry.price_level}} <br />
-                        {{ entry.vicinity }} <br />
-                    </div>
+            {% if entry.name is defined %}
+            <div class="row">
+                <hr />
+                <div class="g-col-4">
+                    <img src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=50&maxheight=75&photo_reference={{ entry.res_photo }}&key=AIzaSyDDKTXC22b3UwBzEoULKfOry0O1f4hbfYE" alt="alt text here" />
                 </div>
+                <div class="g-col-4">
+                    {{ entry.name }} <br />
+                    Rating: {{ entry.rating}} | Price Level: {{entry.price_level}} <br />
+                    {{ entry.vicinity }}
+                </div>               
+            </div>
+            {% endif %}
             {% endfor %}
         </div>
 </body>
-</html>
+</html>                        
